// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolDetailsStats pool balance chart not visible on mobile 1`] = `
<DocumentFragment>
  .c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 4px 0px;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c16 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 4px 0px;
}

.c4 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c11 {
  width: 20px;
  height: 20px;
  border-radius: 50%;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  color: #FF5F52;
}

.c2 {
  font-weight: 485;
  font-size: 24px;
  line-height: 36px;
}

.c1 {
  gap: 24px;
  padding: 20px;
  border-radius: 20px;
  background: #F9F9F9;
  width: 100%;
  z-index: 1;
  margin-top: -24px;
}

.c3 {
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 180px;
}

.c7 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  font-weight: 485;
  font-size: 16px;
  line-height: 24px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c12:hover {
  opacity: 0.6;
}

.c12:active {
  opacity: 0.4;
}

.c13 {
  gap: 4px;
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c14 {
  color: #222222;
  font-size: 36px;
  font-weight: 485;
  line-height: 44px;
}

@media (max-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background: transparent;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 20px 0px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin-top: 0px;
  }
}

@media (max-width:640px) {
  .c3 {
    min-width: 150px;
  }
}

@media (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1024px) {
  .c8 {
    font-size: 20px;
    line-height: 28px;
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c13 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 0px;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:1024px) {
  .c14 {
    font-size: 20px;
    line-height: 28px;
  }
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0 c1"
      >
        <div
          class="c2 css-vurnku"
        >
          Stats
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            Pool balances
          </div>
          <div
            class="c5 c6 c7"
          >
            <div
              class="c5 c6 c8"
            >
              <div
                class="c9"
                style="height: 20px; width: 20px; margin-right: 8px;"
              >
                <div
                  class="c10"
                >
                  <img
                    class="c11"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                  />
                </div>
              </div>
              90.9M 
              <a
                class="c12"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
              >
                USDC
              </a>
            </div>
            <div
              class="c5 c6 c8"
            >
              <div
                class="c9"
                style="height: 20px; width: 20px; margin-right: 8px;"
              >
                <div
                  class="c10"
                >
                  <img
                    class="c11"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
              82.5K 
              <a
                class="c12"
                href="/explore/tokens/ethereum/NATIVE"
              >
                ETH
              </a>
            </div>
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            TVL
          </div>
          <div
            class="c5 c6 c13"
          >
            <div
              class="c14 css-vurnku"
            >
              $223.2M
            </div>
            <div
              class="c15 c16"
              width="max-content"
            >
              <svg
                aria-label="down"
                class="c17"
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="c4 css-1urox24"
              >
                0.37%
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            24H volume
          </div>
          <div
            class="c5 c6 c13"
          >
            <div
              class="c14 css-vurnku"
            >
              $194.3M
            </div>
            <div
              class="c15 c16"
              width="max-content"
            >
              <svg
                aria-label="down"
                class="c17"
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="c4 css-1urox24"
              >
                17.75%
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            24H fees
          </div>
          <div
            class="c5 c6 c13"
          >
            <div
              class="c14 css-vurnku"
            >
              $97.1K
            </div>
          </div>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`PoolDetailsStats renders stats text correctly 1`] = `
<DocumentFragment>
  .c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 4px 0px;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 4px 0px;
}

.c4 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c12 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  color: #FF5F52;
}

.c2 {
  font-weight: 485;
  font-size: 24px;
  line-height: 36px;
}

.c1 {
  gap: 24px;
  padding: 20px;
  border-radius: 20px;
  background: #F9F9F9;
  width: 100%;
  z-index: 1;
  margin-top: -24px;
}

.c3 {
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 180px;
}

.c7 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  font-weight: 485;
  font-size: 16px;
  line-height: 24px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c9:hover {
  opacity: 0.6;
}

.c9:active {
  opacity: 0.4;
}

.c13 {
  height: 8px;
  width: 99.99999996483845%;
  background: #FC72FF;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  border-right: 1px solid #F9F9F9;
}

.c14 {
  height: 8px;
  width: 3.5161546763980574e-8%;
  background: #4C82FB;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border-left: 1px solid #F9F9F9;
}

.c15 {
  gap: 4px;
  width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c16 {
  color: #222222;
  font-size: 36px;
  font-weight: 485;
  line-height: 44px;
}

@media (max-width:1024px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background: transparent;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 20px 0px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin-top: 0px;
  }
}

@media (max-width:640px) {
  .c3 {
    min-width: 150px;
  }
}

@media (max-width:1024px) {
  .c7 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1024px) {
  .c8 {
    font-size: 20px;
    line-height: 28px;
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 0px;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:1024px) {
  .c16 {
    font-size: 20px;
    line-height: 28px;
  }
}

<span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0 c1"
      >
        <div
          class="c2 css-vurnku"
        >
          Stats
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            Pool balances
          </div>
          <div
            class="c5 c6 c7"
          >
            <div
              class="c5 c6 c8"
            >
              90.9M 
              <a
                class="c9"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
              >
                <div
                  class="c10"
                  style="height: 16px; width: 16px; margin-right: 4px; margin-left: 4px;"
                >
                  <div
                    class="c11"
                  >
                    <img
                      class="c12"
                      src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    />
                  </div>
                </div>
                USDC
              </a>
            </div>
            <div
              class="c5 c6 c8"
            >
              82.5K 
              <a
                class="c9"
                href="/explore/tokens/ethereum/NATIVE"
              >
                <div
                  class="c10"
                  style="height: 16px; width: 16px; margin-right: 4px; margin-left: 4px;"
                >
                  <div
                    class="c11"
                  >
                    <img
                      class="c12"
                      src="ethereum-logo.png"
                    />
                  </div>
                </div>
                ETH
              </a>
            </div>
          </div>
          <div
            class="c5 c6"
            data-testid="pool-balance-chart"
          >
            <div
              class="c13"
            />
            <div
              class="c14"
            />
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            TVL
          </div>
          <div
            class="c5 c6 c15"
          >
            <div
              class="c16 css-vurnku"
            >
              $223.2M
            </div>
            <div
              class="c17 c18"
              width="max-content"
            >
              <svg
                aria-label="down"
                class="c19"
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="c4 css-1urox24"
              >
                0.37%
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            24H volume
          </div>
          <div
            class="c5 c6 c15"
          >
            <div
              class="c16 css-vurnku"
            >
              $194.3M
            </div>
            <div
              class="c17 c18"
              width="max-content"
            >
              <svg
                aria-label="down"
                class="c19"
                fill="none"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="c4 css-1urox24"
              >
                17.75%
              </div>
            </div>
          </div>
        </div>
        <div
          class="c0 c3"
        >
          <div
            class="c4 css-1urox24"
          >
            24H fees
          </div>
          <div
            class="c5 c6 c15"
          >
            <div
              class="c16 css-vurnku"
            >
              $97.1K
            </div>
          </div>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;
